force-app/main/default/objects/Contract/fields/Management_Fee_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Trigger__c</fullName>
    <description>Shows Management Fee trigger event.</description>
    <inlineHelpText>Shows Management Fee trigger event.</inlineHelpText>
    <label>XXManagement Fee Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Client_Invoicing_Events</valueSetName>
    </valueSet>
</CustomField>