force-app/main/default/objects/Contract/fields/Management_Invoicing_Detail__c.field-meta.xml
<CustomField>
    <fullName>Management_Invoicing_Detail__c</fullName>
    <inlineHelpText>Terms at which management fee is invoiced</inlineHelpText>
    <label>Management Invoicing Detail</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>