force-app/main/default/objects/Contract/fields/Management_Invoicing_Timing__c.field-meta.xml
<CustomField>
    <fullName>Management_Invoicing_Timing__c</fullName>
    <inlineHelpText>Timing of management fee invoicing</inlineHelpText>
    <label>XXManagement Invoicing Timing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>