force-app/main/default/objects/Contract/fields/Monthly_Flat_Gateway_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Flat_Gateway_Fee__c</fullName>
    <inlineHelpText>(% fee per $ collected) Gateway Fee charged to client</inlineHelpText>
    <label>Monthly Flat Gateway Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>