force-app/main/default/objects/Contract/fields/Onboarding_Fee__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Fee__c</fullName>
    <inlineHelpText>$ / MW DC</inlineHelpText>
    <label>XXOnboarding Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>