force-app/main/default/objects/Contract/fields/Onboarding_Fee_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Fee_Trigger__c</fullName>
    <label>XXOnboarding Fee Trigger</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>Client_Invoicing_Events</valueSetName>
        
        </valueSet>
</CustomField>