force-app/main/default/objects/Contract/fields/Other_Party__c.field-meta.xml
<CustomField>
    <fullName>Other_Party__c</fullName>
    <label>Other Party(s)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>