force-app/main/default/objects/Contract/fields/Override_Countersign_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Override_Countersign_Template_Id__c</fullName>
    <description>Field used to get the original contract sent to the customer.</description>
    <inlineHelpText>Field used to get the original contract sent to the customer.</inlineHelpText>
    <label>Override Countersign Template Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>