force-app/main/default/objects/Contract/fields/Parent_Contract__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is normally populated on contracts that are amendments to an active contract.It is also used for customer contracts that are covered by a boilerplate terms/generic contract that allows us to generate project specific contracts on their behalf.</inlineHelpText>
    <label>Parent Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>ParentContracts</relationshipName>
    <type>Lookup</type>
</CustomField>