force-app/main/default/objects/Contract/fields/Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>Payment_Methods__c</fullName>
    <inlineHelpText>Payment Methods Accepted</inlineHelpText>
    <label>Payment Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>ACH</fullName>
                
                
                    <label>ACH</label>
                
                </value>
            
                <value>
                
                    <fullName>Credit Card</fullName>
                
                
                    <label>Credit Card</label>
                
                </value>
            
                <value>
                
                    <fullName>Paper Check</fullName>
                
                
                    <label>Paper Check</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>