force-app/main/default/objects/Contract/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <label>Contract/Project Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>