force-app/main/default/objects/Contract/fields/Project_Value__c.field-meta.xml
<CustomField>
    <fullName>Project_Value__c</fullName>
    <inlineHelpText>Numerical value of a project - Please enter $0 if there&apos;s no value attached to the project yet.</inlineHelpText>
    <label>Contract/Project Value</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>