force-app/main/default/objects/Contract/fields/Reason_for_Date_Needed__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Date_Needed__c</fullName>
    <inlineHelpText>Please provide a reason for specifying &apos;Date Needed&apos;</inlineHelpText>
    <label>Reason for Date Needed</label>
    <length>200</length>
    <type>Text</type>
</CustomField>