force-app/main/default/objects/Contract/fields/Reporting_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Requirements__c</fullName>
    <inlineHelpText>Required client reports, see detail field for more specifics</inlineHelpText>
    <label>Reporting Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Aging</fullName>
            </value>
            <value>
                <fullName>Customer Terminations</fullName>
            </value>
            <value>
                <fullName>Project Attrition</fullName>
            </value>
            <value>
                <fullName>Accounts Receivable</fullName>
            </value>
            <value>
                <fullName>Days Sales Outstanding (DSO)</fullName>
            </value>
            <value>
                <fullName>Other, see detail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>