force-app/main/default/objects/Contract/fields/Reporting_Requirements_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Requirements_Detail__c</fullName>
    <label>Reporting Requirements Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>