force-app/main/default/objects/Contract/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <inlineHelpText>Please write any material risks involved and how they can be mitigated.</inlineHelpText>
    <label>Risk</label>
    <length>200</length>
    <type>Text</type>
</CustomField>