force-app/main/default/objects/Contract/fields/SSF_Signature_URL__c.field-meta.xml
<CustomField>
    <fullName>SSF_Signature_URL__c</fullName>
    <description>SSF customer signature url used for conga template merge fields</description>
    <label>SSF Signature URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>