force-app/main/default/objects/Contract/fields/State_Applications__c.field-meta.xml
<CustomField>
    <fullName>State_Applications__c</fullName>
    <label>State(s) Applications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_abbreviations</valueSetName>
    </valueSet>
</CustomField>