force-app/main/default/objects/Contract/fields/Team_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Team_Submitted_By__c</fullName>
    <label>Team Submitted By</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Business Applications</fullName>
                
                
                    <label>Business Applications</label>
                
                </value>
            
                <value>
                
                    <fullName>Business Development</fullName>
                
                
                    <label>Business Development</label>
                
                </value>
            
                <value>
                
                    <fullName>Client Operations</fullName>
                
                
                    <label>Client Operations</label>
                
                </value>
            
                <value>
                
                    <fullName>Client Product Management</fullName>
                
                
                    <label>Client Product Management</label>
                
                </value>
            
                <value>
                
                    <fullName>CS Product Management</fullName>
                
                
                    <label>CS Product Management</label>
                
                </value>
            
                <value>
                
                    <fullName>Customer Operations</fullName>
                
                
                    <label>Customer Operations</label>
                
                </value>
            
                <value>
                
                    <fullName>Data and Finance Operations</fullName>
                
                
                    <label>Data and Finance Operations</label>
                
                </value>
            
                <value>
                
                    <fullName>Information &amp; Technology</fullName>
                
                
                    <label>Information &amp; Technology</label>
                
                </value>
            
                <value>
                
                    <fullName>Legal</fullName>
                
                
                    <label>Legal</label>
                
                </value>
            
                <value>
                
                    <fullName>Marketing</fullName>
                
                
                    <label>Marketing</label>
                
                </value>
            
                <value>
                
                    <fullName>Office Management</fullName>
                
                
                    <label>Office Management</label>
                
                </value>
            
                <value>
                
                    <fullName>Originations</fullName>
                
                
                    <label>Originations</label>
                
                </value>
            
                <value>
                
                    <fullName>UX Development</fullName>
                
                
                    <label>UX Development</label>
                
                </value>
            
                <value>
                
                    <fullName>People</fullName>
                
                
                    <label>People</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>