force-app/main/default/objects/Contract/fields/Termination_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reasons__c</fullName>
    <inlineHelpText>Reasons and Circumstances in which BW or the Client could terminate this agreement</inlineHelpText>
    <label>Termination Reasons</label>
    <length>60000</length>
    <type>Html</type>
</CustomField>