force-app/main/default/objects/Contract/fields/Waitlist_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Requirements__c</fullName>
    <label>Waitlist Requirements</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>