force-app/main/default/objects/Contract/recordTypes/Assignment_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Assignment_Agreement</fullName>
    <active>true</active>
    <description>Generated when customers are assigned from BW to a client</description>
    <label>Assignment Agreement</label>
</RecordType>