force-app/main/default/objects/Contract/recordTypes/Customer_Contract.recordType-meta.xml
<RecordType>
    <fullName>Customer_Contract</fullName>
    <active>true</active>
    <label>Customer Contract</label>
</RecordType>