force-app/main/default/objects/Contract/recordTypes/General_Contract.recordType-meta.xml
<RecordType>
    <fullName>General_Contract</fullName>
    <active>true</active>
    <label>General Contract</label>
</RecordType>