force-app/main/default/objects/Contract/validationRules/Contract_Assignment_Agreement.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Assignment_Agreement</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Assignment_Agreement__c),
OR(
PRIORVALUE(Assigned_to_Client__c),
Assigned_to_Client__c
),
NOT( $Permission.Customer_Assignment_Agreement_Management )
)</errorConditionFormula>
    <errorDisplayField>Assignment_Agreement__c</errorDisplayField>
    <errorMessage>We should not change a customer&apos;s assignment agreement after it has been set and Assigned to Client is checked, unless you have the Customer Assignment Agreement Management permission</errorMessage>
</ValidationRule>