force-app/main/default/objects/Contract/listViews/AllActivatedContracts.listView-meta.xml
<ListView>
    <fullName>AllActivatedContracts</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>CONTRACT.STATUS_CODE</field>
        
            <operation>equals</operation>
        
            <value>A</value>
        
        </filters>
    <label>All Activated Contracts</label>
</ListView>