force-app/main/default/objects/Contract/listViews/AllInApprovalContracts.listView-meta.xml
<ListView>
    <fullName>AllInApprovalContracts</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>CONTRACT.STATUS_CODE</field>
        
            <operation>equals</operation>
        
            <value>P</value>
        
        </filters>
    <label>All In Approval Contracts</label>
</ListView>