force-app/main/default/objects/Contract/listViews/MyActivatedContracts.listView-meta.xml
<ListView>
    <fullName>MyActivatedContracts</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        
            <field>CONTRACT.STATUS_CODE</field>
        
            <operation>equals</operation>
        
            <value>A</value>
        
        </filters>
    <label>My Activated Contracts</label>
</ListView>