force-app/main/default/objects/Contract/listViews/MyDraftContracts.listView-meta.xml
<ListView>
    <fullName>MyDraftContracts</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        
            <field>CONTRACT.STATUS_CODE</field>
        
            <operation>equals</operation>
        
            <value>D</value>
        
        </filters>
    <label>My Draft Contracts</label>
</ListView>