force-app/main/default/objects/Contract/listViews/MyInApprovalContracts.listView-meta.xml
<ListView>
    <fullName>MyInApprovalContracts</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        
            <field>CONTRACT.STATUS_CODE</field>
        
            <operation>equals</operation>
        
            <value>P</value>
        
        </filters>
    <label>My In Approval Contracts</label>
</ListView>